# llm-scope

./: .gitignore  README.md  pyproject.toml
llm_scope/: __init__.py  __main__.py  cli.py  config.py  metrics.py  providers.py  proxy.py  storage.py
llm_scope/static/: dashboard.html
tests/: check_db.py  test_phase1.py
