[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-scope-cli"
version = "0.1.2"
description = "Local debugger for LLM API calls — waterfall breakdown of TTFT, cost, and token speed"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "debugging", "deepseek", "openai", "proxy", "ttft", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
llm-scope = "llm_scope.cli:main"
devscope = "llm_scope.cli:main"

[project.urls]
Homepage = "https://github.com/timchow1228/llm-scope"
Repository = "https://github.com/timchow1228/llm-scope"

[tool.hatch.build.targets.wheel]
packages = ["llm_scope"]

[tool.hatch.build.targets.wheel.shared-data]
"llm_scope/static" = "share/llm_scope/static"
